# RBS

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/inc/: client.h  client_utils.h
client/src/: client.cc  main.cc
public/: database.txt
server/: CMakeLists.txt
server/inc/: server.h  server_utils.h
server/src/: main.cc  server.cc
shared/: CMakeLists.txt
shared/database/: CMakeLists.txt  database.cc  database.h
shared/logger/: CMakeLists.txt  logger.cc  logger.h
shared/socket/: CMakeLists.txt  socket.cc  socket.h
test/: CMakeLists.txt  main.cc
